        when indexing a user with no associated URI.
      - If an version of an extension is deleted from the mirror extension
        JSON file, it will now also be deleted from the API doc root's
        extension JSON file (Issue #8).
      - Requiring Text::Markup 0.13, as it has an important fix for parsing
        Pod.

0.15.0  2011-05-12T18:40:43
      - Changed the JSONP callback parameter from "jsonp" to "callback".

0.14.1  2011-05-12T18:11:02
      - Changed mentions of `pgxn_apid` to the correct `pgxn_api_server` in
        `pgxn_api_server` docs.
      - Backported to support Perl 5.10.

0.14.0  2011-05-03T00:09:13
      - Now require Plack 0.9977 to enable JSONP for all JSON file requests.
      - Fixed test failures on systems where `rsync` is not in the path.
      - Replaced `pgxn_api.psgi` with `pgxn_api_server`. The latter uses
        proper command-line processing and includes all of the functionality
        of `plackup`.

0.13.0  2011-04-30T20:40:21
      - The "name" and "user_name" fields are now full-text indexed in the
        "docs", "dists", and "extensions" indexes. This will allow a search
        such as `user:theory` to return results.

0.12.9  2011-04-30T20:01:29
      - Fixed a test failure in `t/indexer.t` on case-sensitive file systems.
      - Removed use of `env perl` in the `t/bin/testrscync` script. Just use
        `/usr/bin/perl -w` instead and let it be any Perl, not just 5.12.
        Should prevent failures on systems that don't allow arguments to `env`
        and where the system Perl is different than the installating Perl.
      - Added Data::Dump to list of requirements. Was inadvertently omitted.

0.12.8  2011-04-29T21:21:13
      - Some documentation tweaks.
      - First release to CPAN.

0.12.7  2011-04-28T22:28:31
      - Fixed a bug where an updated root `index.json` updated on the mirror
        was not likewise getting updated in the API root.