@@ -36,15 +36,15 @@ my $build = $class->new(
         'File::Spec'                   => '3.33',
         'JSON'                         => '2.27',
         'JSON::XS'                     => '2.3',
-        'KinoSearch'                   => '0.311',
         'List::Util'                   => '1.23',
         'List::MoreUtils'              => '0.30',
+        'Lucy'                         => '0.2.1',
         'Moose'                        => '1.15',
         'Moose::Util::TypeConstraints' => '1.15',
         'MooseX::Singleton'            => '0.25',
         'namespace::autoclean'         => '0.11',
         'perl'                         => 5.010,
-        'PGXN::API::Searcher'          => '0.9.0',
+        'PGXN::API::Searcher'          => '0.9.4',
         'Plack'                        => '0.9977',
         'Plack::App::Directory'        => 0,
         'Plack::App::File'             => 0,
