@@ -8,6 +8,7 @@ Revision history for Perl extension PGXN::API
         extension JSON file (Issue #8).
       - Requiring Text::Markup 0.13, as it has an important fix for parsing
         Pod.
+      - Upgraded from KinoSearch to Lucy.
 
 0.15.0  2011-05-12T18:40:43
       - Changed the JSONP callback parameter from "jsonp" to "callback".
